# uC-CPU

./: meson.build
ARM-Cortex-A/ARMv7-A/GNU/: meson.build
POSIX/GNU/: meson.build
Win32/Visual_Studio/: cpu_c.c  meson.build
